# emmanuel_repo

./: CONTRIBUTING.md  README.md  Taskfile.yml  buildspec.yml  firstscript.py  macrocosm.yml  pyproject.toml
docs/: myproject.py
emmalee/: Taskfile.yml  example.py  pyproject.toml
scripts/: accountcreation.py
