[tool.poetry]
name = "poetry.project"
version = "0.1.0"
description = ""
authors = ["Emmanuel Eleruja <elerujaemmy@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
fastapi = "^0.73.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.931"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
